<resources>
    <string name="app_name">Xe</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0</string>
    <string name="title_activity_currency_calculator">CurrencyCalculatorActivity</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="evaluate">=</string>
    <string name="plus">+</string>
    <string name="minus">\u2014</string>
    <string name="divide">/</string>
    <string name="multiply">X</string>
    <string name="decimal_separator">.</string>
    <string name="rates_file_key" />
    <string name="base_target">rate.getExchangeRate() + \"-\"+ rate.getTargetCurrency()</string>
    <string name="delete">del</string>
    <string name="open_brace">(</string>
    <string name="close_brace">)</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="select_currency">Choose a base curency</string>
    <string name="select_target">Choose a target currency</string>

</resources>