<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.andela.currencycalculator.Main2Activity"
    tools:showIn="@layout/activity_main2"
    android:background="@color/colordark">

    <LinearLayout
        android:id="@+id/main_screen"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calculator_main_sceen_height"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:elevation="6dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/currency_expression_display"
                android:layout_marginRight="5dp"
                android:padding="@dimen/screen_padding"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/base_screen"
                style="@style/text_color"
                android:textSize="@dimen/result_screen_text_size"
                android:maxLines="1"
                android:singleLine="true"
                android:scrollHorizontally="false"
                android:text="0" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/colorPrimary">
            <Spinner
            android:id="@+id/base_curry"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            ></Spinner></LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/currency_expression_display"
            android:layout_marginRight="5dp"
            android:padding="@dimen/screen_padding"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/target_screen"
            style="@style/text_color"
            android:textSize="@dimen/result_screen_text_size"
            android:maxLines="1"
            android:singleLine="true"
            android:scrollHorizontally="false"
            android:text="0" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/colorPrimary">
        <Spinner
            android:id="@+id/target_currency_spinner"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="start"></Spinner>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/expression_screen_height"
            android:padding="@dimen/screen_padding"
            android:gravity="center_vertical|right"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/expression_screen"
            android:layout_gravity="end"
            style="@style/text_color"
            android:singleLine="true"
            android:textDirection="ltr"
            android:textSize="@dimen/expresion_screen_text_size"
            android:text="0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/screen_padding"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/evaluation_screen"
            android:layout_gravity="end"
            android:gravity="center_vertical|right"
            style="@style/text_color"
            android:textSize="@dimen/result_screen_text_size"
            android:maxLines="1"
            android:singleLine="true"
            android:scrollHorizontally="false"
            android:textDirection="ltr"
            android:text="0"
            android:maxLength="15" />
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="4"
        android:layout_below="@id/main_screen"
        android:layout_alignParentRight="true"
        android:divider="@drawable/divider"
        android:paddingTop="20dp"
        android:showDividers="middle">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:divider="@drawable/divider"
            android:showDividers="middle">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_clear"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textStyle="bold"
                android:onClick="clearButton"
                style="@style/keypadStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_openbrace"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/open_brace"
                android:textStyle="normal"
                android:onClick="onKeyPressed"
                style="@style/keypadStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_closebrace"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/close_brace"
                android:textStyle="normal"
                android:onClick="onKeyPressed"
                style="@style/keypadStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_delete"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textStyle="normal"
                android:onClick="delete"
                android:background="#004D40"
                style="@style/keypadStyle"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:divider="@drawable/divider"
            android:showDividers="middle">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_seven"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textStyle="normal"
                android:onClick="buttonSeven"
                style="@style/keypadStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_eight"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textStyle="normal"
                android:onClick="buttonEight"
                style="@style/keypadStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_nine"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textStyle="normal"
                android:onClick="buttonNine"
                style="@style/keypadStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_divide"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textStyle="normal"
                android:onClick="buttonDivide"
                android:background="#004D40"
                style="@style/keypadStyle"/>
        </TableRow>
        <TableRow  android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:divider="@drawable/divider"
            android:showDividers="middle">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_four"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/four"
                android:textStyle="normal"
                android:onClick="buttonFour"
                style="@style/keypadStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_five"
                android:layout_column="0"
                android:layout_weight="1"
                style="@style/keypadStyle"
                android:text="@string/five"
                android:textStyle="normal"
                android:onClick="buttonfive" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_six"
                android:layout_column="0"
                android:layout_weight="1"
                style="@style/keypadStyle"
                android:text="@string/six"
                android:textStyle="normal"
                android:onClick="buttonSix" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_multiply"
                android:layout_column="0"
                android:layout_weight="1"
                style="@style/keypadStyle"
                android:text="@string/multiply"
                android:textStyle="normal"
                android:onClick="buttonMultiply"
                android:background="#004D40"/>
        </TableRow>
        <TableRow  android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:divider="@drawable/divider"
            android:showDividers="middle">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_one"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/one"
                android:textStyle="normal"
                android:onClick="buttonOne"
                style="@style/keypadStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_two"
                android:layout_column="0"
                android:layout_weight="1"
                style="@style/keypadStyle"
                android:text="@string/two"
                android:textStyle="normal"
                android:onClick="buttonTwo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_three"
                android:layout_column="0"
                android:layout_weight="1"
                style="@style/keypadStyle"
                android:text="@string/three"
                android:textStyle="normal"
                android:onClick="buttonThree" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_subtraction"
                android:layout_column="0"
                android:layout_weight="1"
                style="@style/keypadStyle"
                android:text="@string/minus"
                android:textStyle="normal"
                android:onClick="buttonMinus"
                android:background="#004D40"/>
        </TableRow>
        <TableRow  android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:divider="@drawable/divider"
            android:showDividers="middle">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/decimal_separator"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/decimal_separator"
                android:textStyle="normal"
                android:onClick="buttonDecimalPoint"
                style="@style/keypadStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_zero"
                android:layout_column="0"
                android:layout_weight="1"
                style="@style/keypadStyle"
                android:text="@string/zero"
                android:textStyle="normal"
                android:onClick="buttonZero" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_equal"
                android:layout_column="0"
                android:layout_weight="1"
                style="@style/keypadStyle"
                android:text="@string/evaluate"
                android:textStyle="normal"
                android:onClick="buttonEqualTo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/key_addition"
                android:layout_column="0"
                android:layout_weight="1"
                style="@style/keypadStyle"
                android:background="#004D40"
                android:text="@string/plus"
                android:textStyle="normal"
                android:onClick="buttonPlus" />
        </TableRow>
        </TableLayout>

</RelativeLayout>
